--- a/.settings/com.powerflasher.fdt.classpath
+++ b/.settings/com.powerflasher.fdt.classpath
@@ -4,10 +4,10 @@
 <AS3Classpath generateProblems="false" sdkBased="true" type="lib" useAsSharedCode="false">frameworks/libs/player/{playerVersion}/playerglobal.swc</AS3Classpath>
 <AS3Classpath generateProblems="true" sdkBased="false" type="source" useAsSharedCode="false">src</AS3Classpath>
 <AS3Classpath generateProblems="true" sdkBased="false" type="source" useAsSharedCode="false">cocktail/src</AS3Classpath>
-<AS3Classpath generateProblems="false" sdkBased="false" type="lib" useAsSharedCode="false">cocktail/src/cocktail/vendors/as3corelib-json.swc</AS3Classpath>
-<AS3Classpath generateProblems="false" sdkBased="false" type="lib" useAsSharedCode="false">cocktail/src/cocktail/vendors/as3ds.swc</AS3Classpath>
-<AS3Classpath generateProblems="false" sdkBased="false" type="lib" useAsSharedCode="false">cocktail/src/cocktail/vendors/e4xparser.swc</AS3Classpath>
-<AS3Classpath generateProblems="false" sdkBased="false" type="lib" useAsSharedCode="false">cocktail/src/cocktail/vendors/swfaddress.swc</AS3Classpath>
-<AS3Classpath generateProblems="false" sdkBased="false" type="lib" useAsSharedCode="false">cocktail/src/cocktail/vendors/TweenMax.swc</AS3Classpath>
 <AS3Classpath generateProblems="true" sdkBased="false" type="source" useAsSharedCode="false">cocktail/vendors</AS3Classpath>
+<AS3Classpath generateProblems="false" sdkBased="false" type="lib" useAsSharedCode="false">cocktail/vendors/TweenMax.swc</AS3Classpath>
+<AS3Classpath generateProblems="false" sdkBased="false" type="lib" useAsSharedCode="false">cocktail/vendors/as3corelib-json.swc</AS3Classpath>
+<AS3Classpath generateProblems="false" sdkBased="false" type="lib" useAsSharedCode="false">cocktail/vendors/as3ds.swc</AS3Classpath>
+<AS3Classpath generateProblems="false" sdkBased="false" type="lib" useAsSharedCode="false">cocktail/vendors/e4xparser.swc</AS3Classpath>
+<AS3Classpath generateProblems="false" sdkBased="false" type="lib" useAsSharedCode="false">cocktail/vendors/swfaddress.swc</AS3Classpath>
 </AS3Classpath>
